--- a/include/config.h.in
+++ b/include/config.h.in
@@ -19,6 +19,7 @@
 #undef HAVE_SYS_STAT_H
 #undef HAVE_SYS_TYPES_H
 #undef HAVE_ARPA_INET_H
+#undef HAVE_LIMITS_H
 
 /* define to mean sys/time.h better have struct tm */
 #undef TM_IN_SYS_TIME
