--- a/configure.in
+++ b/configure.in
@@ -78,7 +78,7 @@ AC_CHECK_HEADERS(pwd.h strings.h bstring.h)
 AC_CHECK_HEADERS(netinet/in.h netinet/tcp.h netdb.h sys/select.h sys/socket.h)
 AC_CHECK_HEADERS(sys/param.h sys/stat.h sys/types.h)
 AC_CHECK_HEADERS(arpa/inet.h assert.h)
-AC_CHECK_HEADERS(zlib.h, [/bin/true],
+AC_CHECK_HEADERS(zlib.h,,
 [
   echo
   echo "*** Could not find compression library header (zlib.h)."
@@ -90,8 +90,13 @@ AC_CHECK_HEADERS(zlib.h, [/bin/true],
 ]
 )
 
-AC_CHECK_HEADERS(xpm.h, [/bin/true],
-[
+HAVE_XPM_H=no
+HAVE_X11_XPM_H=no
+
+AC_CHECK_HEADERS(xpm.h, [HAVE_XPM_H=yes],
+  AC_CHECK_HEADERS(X11/xpm.h, [HAVE_X11_XPM_H=yes]))
+
+if test "x$HAVE_XPM_H" = xno -a "x$HAVE_X11_XPM_H" != xno; then
   echo
   echo "*** Could not find XPM library header (xpm.h)."
   echo "*** Make sure that it is installed and set"
@@ -99,8 +104,7 @@ AC_CHECK_HEADERS(xpm.h, [/bin/true],
   echo "*** with -I(path) before re-running configure."
   echo
   exit 1
-]
-)
+fi
 
 dnl Check for typedefs, structs, and compiler characteristics
 AC_C_CONST
@@ -135,14 +139,13 @@ AC_ARG_ENABLE(rsa,
 [  --enable-rsa[=EXPIRE]   Enable RSA authentication in client
                              [EXPIRE=today+2 yrs or MM-DD-YYYY or MM/DD/YYYY]],
   [ if test "x$ac_have_rsa" = xyes; then ]
-    AC_CHECK_HEADERS(gmp.h, [/bin/true],
+    AC_CHECK_HEADERS(gmp.h,,
                      [ echo "  *** Cannot find gmp.h"
 		       ac_have_rsa="no" ])
-    AC_CHECK_LIB(gmp, mpz_init, [/bin/true],
+    AC_CHECK_LIB(gmp, mpz_init,,
                  [ echo "  *** Cannot find GNU MP library (libgmp)"
 	           ac_have_rsa="no" ])
-    AC_CHECK_FILE($srcdir/src/rsa/rsa_box.c,
-                  [/bin/true],
+    AC_CHECK_FILE($srcdir/src/rsa/rsa_box.c,,
 		  [ echo "  *** Cannot find rsa_box*.c in $srcdir/src/rsa"
 		    ac_have_rsa="no" ])
   [ else
