Tons of minor changes:   1) added a 'make install' target, and built-in image path support      to the client.  This means that 'make; make install' will result      in a functioning XPM client (everyone's favorite change, I'm sure).   2) There were three copies of README.SOUND in README.SOUND.  No longer.   3) updated the man page to reflect TT.   4) XPM mode is enabled by default.   5) Verbose image loading covers ALL errors/warnings/printfs now.

--- a/configure.in
+++ b/configure.in
@@ -168,6 +168,8 @@ AC_ARG_ENABLE(rsa,
     fi ]
 )
 
+SHIP_BITMAP_PATH=${datadir}/paradise/images
+
 AC_SUBST(RSADIR)
 AC_SUBST(ZLIB)
 AC_SUBST(XPMLIB)
@@ -177,6 +179,7 @@ AC_SUBST(AUTH_OBJS)
 AC_SUBST(AUTH_DEFS)
 AC_SUBST(SCRAMBLER)
 AC_SUBST(EXPIRE_DATE)
+AC_SUBST(SHIP_BITMAP_PATH)
 
 AC_OUTPUT(Makefile src/Makefile src/expire.c)
 
