--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -39,7 +39,7 @@ AUTH_LIBS=@AUTH_LIBS@
 AUTH_DEFS=@AUTH_DEFS@
 SCRAMBLER=@SCRAMBLER@
 
-CDEFS=-DUNIX_SOUND
+CDEFS=-DUNIX_SOUND -DSHIP_BITMAP_PATH=\"@SHIP_BITMAP_PATH@\"
 
 LIBS=$(LDFLAGS) $(AUTH_LIBS) $(XPMLIB) $(X_LIBS) $(X_PRE_LIBS) @LIBS@ $(X_EXTRA_LIBS) -lXmu -lX11 $(ZLIB) -lm
 CFLAGS=$(AUTH_DEFS) $(CDEFS) $(DEFS) $(X_CFLAGS) @CFLAGS@
