Second attempt to remove duplicate bitmaps.

--- a/scripts/mkcredits.in
+++ b/scripts/mkcredits.in
@@ -29,43 +29,15 @@ print OUT <<EOF;
  * Bill Dyess
  *
  */
-#include "copyright2.h"
-#include "defines.h"
 
-#include <stdio.h>
-#ifdef STDC_HEADERS
-#include <stdlib.h>
-#endif
-#ifdef HAVE_UNISTD_H
-#include <unistd.h>
-#endif
-#include <sys/types.h>
-#include <sys/stat.h>
-#ifdef HAVE_SYS_FILE_H
-#include <sys/file.h>
-#endif
-#include <errno.h>
-#include <pwd.h>
-#ifdef HAVE_STRING_H
-#include <string.h>
-#else
-#include <strings.h>
-#endif
-#include <ctype.h>
+#include "copyright.h"
+
 #include "config.h"
 #include "Wlib.h"
 #include "defs.h"
 #include "struct.h"
 #include "data.h"
 #include "proto.h"
-
-/* This is never used in this file.  Why is it here?  Someone tell me if
-   this breaks the OSF/1 port */
-#if 0
-#ifndef __osf__
-long    time();
-#endif
-#endif
 
 static char *credits = "\\
 NetrekII (Paradise) is Copyright 1994-1999 by the Paradise Working Group\\n\\
