Updated image code:   1) Built in XBMs by default (and two pixmaps, the dashboard rainbow and      MOTD header)   2) made useExternalImages = 1 by default (so external images override      builtin ones)   3) Fixed up some install code in main Makefile.

--- a/Makefile.in
+++ b/Makefile.in
@@ -47,7 +47,7 @@ install:
 	done
 
 	# cheat on installing the images
-	for i in `find images -name \*.x\[bp\]m -print | grep -v starwars`; do \
+	for i in `find images -name \*.x\[bp\]m -print`; do \
 	  $(INSTALL_DATA) $$i $(datadir)/paradise/$$i; \
 	done
 
