--- a/Makefile.in
+++ b/Makefile.in
@@ -68,4 +68,4 @@ clean:
 
 distclean: clean
 	(cd src && $(MAKE) distclean)
-	-rm -f Makefile config.* include/config.h
+	-rm -f Makefile config.* include/config.h doc/paradise.1
